--- a/src/components/calendarFooter/calendarFooter.css
+++ b/src/components/calendarFooter/calendarFooter.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border: black 1px solid;
+  background-color: #e8ebff;
+  border-top: #e8ebff 1px solid;
   flex: 1;
 }
 
