--- a/src/components/calendarHeader/calendarHeader.css
+++ b/src/components/calendarHeader/calendarHeader.css
@@ -2,13 +2,15 @@
   display: flex;
   flex: 2;
   justify-content: space-between;
-  border: black 1px solid;
+  /* border: black 1px solid; */
+  background-color: #ffffff;
   padding: 30px;
   padding-top: 15px;
   padding-bottom: 15px;
 }
 
 #title {
+  font-size: 20px;
   /* border: black 1px solid; */
 }
 
