--- a/src/components/calendarMain/calendarMain.css
+++ b/src/components/calendarMain/calendarMain.css
@@ -2,15 +2,22 @@
   display: flex;
   flex: 20;
   flex-direction: column;
-  overflow: scroll;
+  overflow: hidden;
 
-  border: black 1px solid;
+  /* border: black 1px solid; */
 }
 
 .calendarSelector {
   display: flex;
   flex-direction: column;
-  /* border: black 1px solid; */
+  background-color: #e8ebff;
+  border-top: #e8ebff 1px solid;
+  border-bottom: #e8ebff 1px solid;
+}
+
+.calendarSelector select {
+  border: 0;
+  background-color: #e8ebff;
 }
 
 .slider {
@@ -50,9 +57,21 @@
 }
 
 .calendarMatrix {
-  /* width: 100px; */
+  overflow-y: scroll;
+  background-color: #ffffff;
 }
+
+.calendarMatrix table {
+  /* display: flex; */
+  width: 100%;
+  border-spacing: 0;
+}
+
+/* .calendarMatrix table tbody {
+  overflow: scroll;
+} */
+
 .calendarMatrix tbody tr th {
   height: 30px;
-  border: black 1px solid;
+  border: #e8ebff 1px solid;
 }
